// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsPageLayout Body should match snapshot for body 1`] = `
<div
  class="grid grid--loose"
  data-testid="body"
>
  <div
    class="hide-print"
    data-component="grid-item"
    data-g="12 md:4 lg:3"
  >
    Menu
  </div>
  <div
    data-component="grid-item"
    data-g="12 md:8 lg:9"
  >
    <div
      class="grid grid--rev grid--loose"
    >
      <div
        data-component="grid-item"
        data-g="12 lg:3"
      >
        <nav
          aria-labelledby="on-this-page"
          class="wrapper"
        >
          <h2
            class="heading"
            id="on-this-page"
          >
            On this page
          </h2>
          <ol
            aria-label="Jump links to sections on this page"
            class="list"
          >
            <li>
              <a
                class=""
                href="#test-1"
              >
                Test 1
              </a>
            </li>
            <li>
              <a
                class=""
                href="#test-2"
              >
                Test 2
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div
        class="body"
        data-component="grid-item"
        data-g="12 lg:9"
      >
        Body content
      </div>
    </div>
  </div>
</div>
`;

exports[`DetailsPageLayout Body should match snapshot for body with no menu 1`] = `
<div
  class="grid grid--loose"
  data-testid="body"
>
  <div
    data-component="grid-item"
    data-g="12 md:12 lg:12"
  >
    <div
      class="grid grid--loose"
    >
      <div
        data-component="grid-item"
        data-g="12 md:8 lg:9"
      >
        <nav
          aria-labelledby="navigate-to-section"
          class="nav"
        >
          <h2
            class="heading"
            id="navigate-to-section"
          >
            <span>
              Navigate to section
            </span>
          </h2>
          <ol
            aria-label="Jump links to sections on this page"
            class="linkList"
          >
            <li>
              <a
                href="#test-1"
              >
                Test 1
              </a>
            </li>
            <li>
              <a
                href="#test-2"
              >
                Test 2
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div
        class="body"
        data-component="grid-item"
        data-g="12 md:8 lg:9"
      >
        Body content
      </div>
    </div>
  </div>
</div>
`;
